Ajout du paiement par paypal le 04/03/2021

--- a/accueil/templates/index.html
+++ b/accueil/templates/index.html
@@ -367,7 +367,8 @@
                      <!-- <h2 class="text-white">Bus</h2> -->
                      <table class="table">
                         <thead>
-                           <h5 class="text-bolder text-primary mt-2">Tableau des départs des bus à la gars principale</h5>
+                           <h5 class="text-bolder text-primary mt-2">Tableau des départs des bus à la gars principale
+                           </h5>
                            <tr>
                               <th>Departs</th>
                               <th>Destinations</th>
@@ -400,16 +401,22 @@
    <div class="container">
       <div class="row slider-text px-4 d-flex align-items-center justify-content-center">
          <div class=" text w-100 page-accueil">
-            <h2 class="text-warning titre-accueil animated fadeInLeft">Accès rapide aux tickets de transports partout aux Comores</h2>
+            <h2 class="text-warning titre-accueil animated fadeInLeft">Accès rapide aux tickets de transports partout
+               aux Comores</h2>
             <div id="" class="no-uicustom barre mb-3 animated fadeInUp"></div>
             <div class="row">
                <div class="col-md-12 col-sm-12 col-lg-12 col-12 justify-left">
                   <div class="mb-5 description-accueil">
                      <p class="mb-2 animated fadeInLeft">Adoptez le type de transport selon votre destination </p>
-                     <p class="mb-2 animated fadeInLeft">Choisissez la destination et les dates de votre prochain voyage</p>
-                     <p class="mb-2 animated fadeInLeft">Consultez les tableaux d'affichages des horaires des départs et arrivées</p>
-                     <p class="mb-5 animated fadeInLeft">Pour les voyages inter-îles, seuls les transports maritimes ou aériens sont possibles</p>
-                     <a href="#informations-supplementaire" class="btn btn-outline-info py-3 px-5">Informations supplémentaires <i class="ion-ios-arrow-round-forward"></i> <i class="ion-ios-arrow-round-forward"></i></a>
+                     <p class="mb-2 animated fadeInLeft">Choisissez la destination et les dates de votre prochain voyage
+                     </p>
+                     <p class="mb-2 animated fadeInLeft">Consultez les tableaux d'affichages des horaires des départs et
+                        arrivées</p>
+                     <p class="mb-5 animated fadeInLeft">Pour les voyages inter-îles, seuls les transports maritimes ou
+                        aériens sont possibles</p>
+                     <a href="#informations-supplementaire" class="btn btn-outline-info py-3 px-5">Informations
+                        supplémentaires <i class="ion-ios-arrow-round-forward"></i> <i
+                           class="ion-ios-arrow-round-forward"></i></a>
                   </div>
                   <!-- <h4 class="text-primary text-choix-accueil animated fadeInUp">Choisir votre moyen de transport souhaité</h4> -->
                   <!-- <div id="" class="no-uicustom barre mb-3 animated fadeInUp"></div> -->
@@ -417,18 +424,18 @@
                      <div class="col-md-4 col-sm-4 col-lg-4 col-4">
                         <h4 class="text-info">Déplacement inter-villes</h4>
                         <a href="" type="button" class="btn btn-warning py-3 btn-formulaire-achat" data-toggle="modal"
-                        data-target="#bus">Bus</a>
+                           data-target="#bus">Bus</a>
                      </div>
                      <div class="col-md-8 col-sm-8 col-lg-8 col-8">
                         <h4 class="text-center text-info">Déplacement inter-îles</h4>
                         <div class="d-flex justify-content-between">
                            <div class="">
-                              <a href="" type="bytton" class="btn btn-primary py-3 btn-formulaire-achat" data-toggle="modal"
-                              data-target="#avion">Avion </a>
+                              <a href="" type="bytton" class="btn btn-primary py-3 btn-formulaire-achat"
+                                 data-toggle="modal" data-target="#avion">Avion </a>
                            </div>
                            <div class="">
-                              <a href="" type="button" class="btn btn-info py-3 btn-formulaire-achat" data-toggle="modal"
-                              data-target="#bateau">Bateau</a>
+                              <a href="" type="button" class="btn btn-info py-3 btn-formulaire-achat"
+                                 data-toggle="modal" data-target="#bateau">Bateau</a>
                            </div>
                         </div>
                      </div>
@@ -452,87 +459,56 @@
    <hr class="fancy-line">
    <div class="row animated fadeInUp">
       <div class="col-md-12 heading-title mt-5">
-         <h1>C-Transports</h1>
-         <div id="" class="no-uicustom barre mb-5"></div>
+         <h2 class="text-warning titre">C-Transports</h2>
       </div>
    </div>
    <div class="row">
       <div class="col-12 col-sm-7 col-md-7 col-lg-7 col-xl-7 animated animated-fast">
          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis maxime corporis,
-            perferendis laboriosam non dolorum vitae sit quod quas ducimus, ea quidem obcaecati harum,
-            voluptatum nobis quos quibusdam mollitia repellat!
+            <b>C-Transports :</b> la communauté s'engageant sur la facilitation de l'accès aux titres de trasports.
          </p>
          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis maxime corporis,
-            perferendis laboriosam non dolorum vitae sit quod quas ducimus, ea quidem obcaecati harum,
-            voluptatum nobis quos quibusdam mollitia repellat!
+            On donne accès aux usagers de voyager avec différents réseaux de transports comoriens <br>
+            Quelque soit le moyen de transport souhaité, C-Transports vous accompagne avec assurance
          </p>
       </div>
-      <div class="col-12 col-sm-5 col-md-5 col-lg-65 col-xl-5">
-         <img src="{% static "images/1.svg" %}" alt="Round Image" class="rounded img-fluid image-2 w-75 h-75">
+      <div class="col-12 col-sm-5 col-md-5 col-lg-5 col-xl-5 text-right">
+         <img src="{% static "images/1.svg" %}" alt="Round Image" class="rounded img-fluid image-2 w-50 h-75">
       </div>
    </div>
 </section>
-
-<section class="container mt-5">
-   <div class="row">
-      <div class="col-md-12 heading-title">
-         <h1>Votre de ticket de transport sous forme de QR code</h1>
-         <div id="" class="no-uicustom barre mb-5"></div>
-      </div>
-   </div>
-   <div class="row">
-      <div class="col-12 col-sm-7 col-md-7 col-lg-7 col-xl-7 animated animated-fast">
-         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis maxime corporis,
-            perferendis laboriosam non dolorum vitae sit quod quas ducimus, ea quidem obcaecati harum,
-            voluptatum nobis quos quibusdam mollitia repellat!
-         </p>
-         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis maxime corporis,
-            perferendis laboriosam non dolorum vitae sit quod quas ducimus, ea quidem obcaecati harum,
-            voluptatum nobis quos quibusdam mollitia repellat!
-         </p>
-      </div>
-      <div class="col-12 col-sm-5 col-md-5 col-lg-65 col-xl-5">
-         <img src="{% static "images/qr-code.png" %}" alt="Round Image" class="rounded img-fluid image-2 w-75 h-75">
-      </div>
-   </div>
-</section>
-
-<!-- Différents moyens de trasports -->
-<section class="container mt-5">
-   <div class="row">
-      <div class="col-md-12 heading-title">
-         <h1>Transports terrestre</h1>
-         <div id="" class="no-uicustom barre mb-5"></div>
-      </div>
-   </div>
-   <div class="row">
-      <div class="col-12 col-sm-7 col-md-7 col-lg-7 col-xl-7 animated animated-fast">
-         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis maxime corporis,
-            perferendis laboriosam non dolorum vitae sit quod quas ducimus, ea quidem obcaecati harum,
-            voluptatum nobis quos quibusdam mollitia repellat!
-         </p>
-         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis maxime corporis,
-            perferendis laboriosam non dolorum vitae sit quod quas ducimus, ea quidem obcaecati harum,
-            voluptatum nobis quos quibusdam mollitia repellat!
-         </p>
-      </div>
-      <div class="col-12 col-sm-5 col-md-5 col-lg-65 col-xl-5">
-         <img src="{% static "images/bu.svg" %}" alt="Round Image" class="rounded w-75 h-75 img-fluid image-2">
+<section class="">
+   <div class="container-fluid">
+      <div class="row bg-primary text-white">
+         <div class="col-md-6 heading-title py-3 px-5">
+            <h4 class="text-white">Paiement sans contact</h4>
+            <div id="" class="no-uicustom bg-info barre mb-2"></div>
+            <div class="d-flex justify-content-between">
+               <p><i class="ion-ios-arrow-round-forward"></i> Rédure les déplacement en privilégiant le paiement sans contact<br>
+                  <i class="ion-ios-arrow-round-forward"></i> Ticket de transport accésible à tout moment et n'importe où <br>
+                  <i class="ion-ios-arrow-round-forward"></i> Transaction réalisable à tout moment
+               </p>
+               <img src="{% static "images/paiement-sans-contact.svg" %}" alt="QR code"
+                  class="rounded img-fluid image-2 w-25 h-25">
+            </div>
+         </div>
+         <div class="col-md-6 heading-title py-3 px-5">
+            <h4 class="text-white">Ticket de transport sous forme de QR code</h4>
+            <div id="" class="no-uicustom barre bg-info mb-2"></div>
+            <div class="d-flex justify-content-between">
+               <p>Le ticket sous forme de Code QR, permet de sécurisé vos données personnels</p>
+               <img src="{% static "images/qr-code.png" %}" alt="Round Image"
+                  class="rounded img-fluid image-2 w-25 h-25">
+            </div>
+         </div>
       </div>
    </div>
 </section>
-
 <!-- Nos services -->
 <section class="mt-5 mb-5 container">
    <div class="row">
       <div class="col-md-12 heading-title">
-         <h1>Nos différents services</h1>
+         <h2 class="titre text-warning">Moyen de transports</h2>
          <div id="" class="no-uicustom barre mb-5"></div>
       </div>
    </div>
@@ -543,7 +519,7 @@
                <img class="card-img-top" src="{% static "images/stb.svg" %}" alt="">
             </div>
             <div class="card-body">
-               <h4 class="card-title">Transport terestre</h4>
+               <h4 class="card-title">Transports terrestres</h4>
                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus
                   enim dolorum vero. Doloribus, aliquam iure id fugiat dolorum beatae recusandae.</p>
             </div>
@@ -555,7 +531,7 @@
                <img class="card-img-top" src="{% static "images/av.svg" %}" alt="">
             </div>
             <div class="card-body">
-               <h4 class="card-title">Transport aérien</h4>
+               <h4 class="card-title">Transports aériens</h4>
                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
                   animi assumenda soluta atque debitis adipisci numquam nemo voluptatibus optio qui!</p>
             </div>
@@ -565,7 +541,7 @@
          <div class="card text-left">
             <img class="card-img-top" src="{% static "images/ba.svg" %}" alt="">
             <div class="card-body">
-               <h4 class="card-title">Trasport maritime</h4>
+               <h4 class="card-title">Trasports maritimes</h4>
                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
                   omnis modi asperiores! Soluta eius et quia, esse animi laudantium voluptate.</p>
             </div>
@@ -578,7 +554,7 @@
 <section class="mt-5 mb-5 container">
    <div class="description-paiement">
       <div class="col-md-12 heading-title">
-         <h1>Les modes de paiement prise en charge</h1>
+         <h2 class="text-warning titre">Modes de paiement</h2>
          <div id="" class="no-uicustom barre mb-5"></div>
       </div>
       <div class="paragraphe-description-paiement text-center mb-5">
