--- a/utilisateur/templates/information.html
+++ b/utilisateur/templates/information.html
@@ -153,7 +153,7 @@
                     {% if erreur %}
                     <div class="alert alert-warning pb-1">
                         <div class="d-flex">
-                            <p>Merci de corrier les erreurs suivantes avant d'envoyer le formulaire</p>
+                            <p>Merci de corriger les erreurs suivantes avant d'envoyer le formulaire</p>
                         </div>
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true"><i class="ion-ios-close"></i></span>
